<resources>
    <string name="app_name">KTeacher</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="Ex1">Translate this sentence again</string>
    <string name="kex">KExercise</string>

    <string name="add_exercise">Add Exercise</string>

    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="sel_kind_ofex">Select kind of exercise</string>
    <string name="klessons">KLessons</string>


    <string name="app_lang">en</string>
    <string name="sel_lang">Select Language</string>
    <string name="err_leson">Lesson could not be added</string>
    <string name="empty_lesson">Lessons with empty title not allowed</string>
    <string name="lesson">Lesson</string>
    <string name="lessons">Lessons</string>
    <string name="namelesson">Lesson Name</string>
    <string name="altnamelesson">Translated</string>
    <string name="romanization">Romanization</string>
    <string name="level">Level</string>
    <string name="dictionary">Dictionary</string>
    <string name="new_lesson">New Lesson</string>
    <string name="and_word">And Word</string>
    <string name="add_example">And example</string>
    <string name="ex1_translated">Text in English</string>
    <string name="ex1_original">Text in Russian</string>
    <string name="posible_answers">Possible answers</string>
    <string name="gived_answer">Your Answer</string>
    <string name="item_new">new</string>
    <string name="item_update">update</string>

    <string name="ready">Ready</string>
    <string name="play">Play</string>
    <string name="playing">Playing</string>
    <string name="rec">Recording</string>
    <string name="max_time">Max Recording time Exceeded</string>

    <string name="choselang">Select Languages</string>
    <string name="choselevel">Select Level</string>

    <string name="settings">Settings</string>
    <string name="viewromanization">Show romanization</string>
    <string name="viewlocalmenus">Show local menus</string>

    <string name="subject">Subject</string>
    <string name="word">Word</string>
    <string name="wordsample">Word example</string>


    <string name="langtoteach">Language to teach</string>
    <string name="langstudents">Language of my students</string>
    <string name="firsttimelang">It is the first time you use the app you must select languages</string>
    <string name="noequallang">Languages can not be equal</string>
    <string name="bothlang">You must select both languages</string>
    <string name="dictionarysearch">Dictionary Search</string>

    <string-array name="languages">
        <item>English</item>
        <item>Spanish</item>
        <item>Russian</item>
        <item>Chinese</item>
    </string-array>


    <string-array name="kind_of_ex">
        <item>Translate sentence from a set of words</item>
        <item>Listen in Russian Write in English</item>
        <item>Listen in Russian Write in Russian</item>
    </string-array>
    <string-array name="examples_original1" translatable="false">
        <item>Говорили, что на набережной появилось новое лицо: дама с собачкой</item>
        <item>Нет ничего лучше Невского проспекта, по крайней мере в Петербурге; для него он составляет все. </item>
        <item>Однажды весною, в час небывало жаркого заката, в Москве, на Патриарших прудах, появились два гражданина</item>
        <item>У меня болит сердце и кружится голова</item>
    </string-array>
    <string-array name="examples_translated1">
        <item>It was said that a new person had appeared on the sea-front: a lady with a little dog</item>
        <item>There is nothing better than the Nevsky avenue, at least for the PeterBurgians, for them he represents everything </item>
        <item>One spring afternoon at the hour of an unusually hot sunset, in Moscow at the Patriarch ponds, two citizens apeared</item>
        <item>My heart hurts and my head spins @dogs @and @cats</item>
    </string-array>

    <string-array name="examples_original3" translatable="false">
        <item>Что с вами? Вам плохо? </item>
        <item>Ты будешь раскаиваться</item>
        <item>Однажды эти два ножа встретились снова</item>
    </string-array>

    <string-array name="examples_translated2">
        <item>What’s wrong with you? Do you feel bad?  </item>
        <item>You will repent</item>
        <item>One day, these two knives met again</item>
        <item>He is a nice person @He is a good guy</item>
    </string-array>
    <string name="and_sentence">Add sentence</string>


    <!--
        У меня болит сердце и кружится голова

    -->


</resources>
