<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.begemot.KTeacher.MainActivity"
    tools:showIn="@layout/activity_main">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <Button
            android:id="@+id/editLeson"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="editLessonClick"
            android:text="@string/edit" />

        <Button
            android:id="@+id/bAddLesson"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="addLessonClick"
            android:text="@string/add" />

        <Button
            android:id="@+id/bDeleteLesson"
            android:layout_width="98dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="deleteLessonClick"
            android:text="@string/delete" />


    </LinearLayout>

    <ListView
        android:id="@+id/myList"
        android:layout_width="328dp"
        android:layout_height="436dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="?android:attr/activatedBackgroundIndicator"
        android:choiceMode="singleChoice"
        android:entries="@android:drawable/alert_dark_frame"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
